--- a/starter/asynchronous.html
+++ b/starter/asynchronous.html
@@ -23,7 +23,7 @@
                 </div>
             </article> -->
         </div>
-        <button class="btn-country">Where am i?</button>
+        <!-- <button class="btn-country">Where am i?</button> -->
         <div class="images"></div>
     </main>
     
